--- a/style.css
+++ b/style.css
@@ -1,46 +1,38 @@
 body{
     margin: 0;
-    padding: 0;
     background-image: url(images/body-backroung.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
 }
-.manager{
-    width: 60vh;
-    height: 25vh;
-    margin-top: 2%;
-    margin-bottom: -5%;
-    margin-left: -5%;
-    display: flex;
-    justify-content: center;
-}
-.manager img{
-    width: 20%;
-    height: 60%;
-}
+
 .field-container{
-    width: 120vh;
-    height: 65vh;
+    width: 150vh;
+    height: 85vh;
     margin: 5%;
     background-image: url(images/terrain-de-foot-3d-700-28041978-cutout.png);
     background-repeat: no-repeat;
     background-position: center;
-    margin-top: -5%;
-    margin-bottom: -10%;
+    background-size: cover;
+    margin-top: 2%;
+    margin-bottom: -2%;
 }
-.main-main{
+.mainpage{
     display: flex;
     justify-content: space-around;
 }
 
 .create-squad{
+    backdrop-filter: blur(10px);
+    margin-top: 7%;
     width: 30px;
     height: 80px;
-    background-color: rgba(51, 51, 51, 0.81); 
-    padding: 10%; 
-    border: rgb(24, 24, 24) solid 2px;
+    background-color: rgba(51, 51, 51, 0.7); 
+    padding: 10%;
+    padding-top: 12%; 
+    padding-bottom: 8%;
+    border: rgba(255, 255, 255, 0.603) solid 1px;
     border-radius: 10px; 
     box-shadow: 5px 5px 10px black;
     display: flex;
@@ -48,10 +40,16 @@ body{
     justify-content: center;
     align-items: center;
 }
+.select-tactic{
+    color: white;
+    width: 80px;
+    font-size: 15px;
+    margin-bottom: -50px;
+}
 
 .create-squad label {
     display: block; 
-    margin-bottom: 20px; 
+    margin-bottom: 10px; 
     font-weight: bold;
     color: white;
     font-family: 'Courier New', Courier, monospace;
@@ -59,27 +57,27 @@ body{
 } 
 .create-squad input { 
     width: 180px; 
-    padding: 10px; 
+    padding: 8px; 
     margin-bottom: 20px; 
-    border: 1px solid #ccc; 
-    border-radius: 5px;
+    border: 2px solid #aeacac; 
+    border-radius: 10px;
 }
-.name{
+.squadname{
     margin-top: -70px;
     margin-bottom: 10px;   
 }
-.squad-info { 
+.squad-formations { 
     display: flex;
     flex-direction: column;
     margin-top: 140%;
     display: flex; 
     gap: 10px; 
 } 
-.squad-info button { 
+.squad-formations button { 
     padding: 10px 20px; 
     border: #20207d solid 2px; 
     border-radius: 5px; 
-    width: 120px;
+    width: 90px;
     background-color: #007BFF; 
     color: white; 
     font-size: 15px;
@@ -87,7 +85,7 @@ body{
     font-family: 'Courier New', Courier, monospace;
     cursor: pointer; 
 } 
-.squad-info button:hover { 
+.squad-formations button:hover { 
     background-color: #20207d;
 }
 
@@ -110,62 +108,42 @@ body{
     background: #555;
   }
 
-
 .header{
+    border-bottom: rgb(255, 255, 255) solid 1px;
     background-color: rgb(45, 47, 45);
     display: flex;
     justify-content: space-between;
     padding-left: 5%;
-    padding-right: 5%;
+    }
+    
+.title{
+    font-style: italic;
+    font-size: 10px;
+    color: white;
+    text-shadow: black 2px 2px ; 
+}
+           
+.add-player-button{
+    align-content: center;    
+}
+    
+.add-player-button button { 
+    padding: 8px 10px;
+    width: 120px;
     height: 50px;
-    }
-    
-    /* .title-logo{
-        display: flex;
-        justify-content: space-between;
-        width: 55%;
-    } */
-    
-    .title{
-        font-style: italic;
-        font-size: 10px;
-        color: white;
-        text-shadow: black 2px 2px ;
-    
-    }
-    
-    #logo{
-        width: 70px;
-        height: 70px;
-    }
-    
-    .head-buttons{
-        width: 20%;
-        display: flex;
-        justify-content: space-between;
-    }
-    
+    border: rgba(23, 9, 125, 0.763) solid 2px;
+    border-radius: 5px; 
+    background-color: #007BFF; 
+    color: white; 
+    font-size: 15px;
+    font-weight: 200;
+    cursor: pointer; 
+} 
 
-    .add-player-button{
-        align-content: center;
-        
-    }
-    
-    .add-player-button button { 
-        padding: 8px 10px; 
-        border: rgba(28, 146, 39, 0.763) solid 2px;
-        border-radius: 10px; 
-        background-color: #007BFF; 
-        color: white; 
-        font-size: 15px;
-        font-weight: 200;
-        cursor: pointer; 
-    } 
 .add-player-button button:hover { 
     background-color: #20207d;
-    }
+}
     
-
 button {
     background-color: #007bff;
     color: white;
@@ -178,27 +156,29 @@ button:hover {
     background-color: #0056b3;
 }
 
-/* popup box */
+/* popup box to create a new player */
 .popup {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(1, 1, 1, 0.2);
+    backdrop-filter: blur(5px);
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  .hidden {
+    z-index: 5;
+}
+.hidden {
     display: none;
-  }
+}
   
 .popup-content {
     border: rgba(28, 146, 39, 0.763) solid 2px;
     display: flex;
     flex-direction: column;
-    background-color: rgba(44, 39, 39, 0.712);
+    background-color: rgba(44, 39, 39, 0.9);
     padding: 20px;
     border-radius: 10px;
     width: 40%;
@@ -261,8 +241,7 @@ button:hover {
     color: white;
     font-size: 15px;
     font-family: 'monospace', Courier;
-    font-weight: 200;
-    
+    font-weight: 200;    
 }
 #position-options .position-btn {
     margin: 5px;
@@ -275,15 +254,15 @@ button:hover {
 }
 
 #general-stats{
-display: flex;
-flex-wrap: wrap;
-width: 40%;
-gap: 10%;
-margin-left: 20%;
-color: white;
-font-size: 15px;
-font-family: 'monospace', Courier;
-margin-top: -2%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;
+    gap: 10%;
+    margin-left: 20%;
+    color: white;
+    font-size: 15px;
+    font-family: 'monospace', Courier;
+    margin-top: -2%;
 }  
 
 #general-stats input{
@@ -291,6 +270,7 @@ margin-top: -2%;
     background-color: rgb(66, 66, 67);
     width: 40px;
     border-radius: 5px;
+    margin-bottom: 5%;
 }
 .popup-content .div4 ::placeholder{
     padding-left: 5%;
@@ -298,15 +278,15 @@ margin-top: -2%;
 }
 
 #goalkeeper-stats{
-display: flex;
-flex-wrap: wrap;
-width: 40%;
-gap: 10%;
-margin-left: 20%;
-color: white;
-font-size: 15px;
-font-family: 'monospace', Courier;
-margin-top: -2%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;
+    gap: 10%;
+    margin-left: 20%;
+    color: white;
+    font-size: 15px;
+    font-family: 'monospace', Courier;
+    margin-top: -2%;
 }  
 
 #goalkeeper-stats input{
@@ -314,6 +294,7 @@ margin-top: -2%;
     background-color: rgb(66, 66, 67);
     width: 40px;
     border-radius: 5px;
+    margin-bottom: 5%;
 }
 
 #goalkeeper-stats {
@@ -321,16 +302,16 @@ margin-top: -2%;
 }
 
 .popup-content .div5{
-    margin-top: 5%;
+    margin-top: 1%;
     display: flex;
     justify-content: end;
 }
 
 .popup-content .div5 button{
-background-color: #058d25;
-border: rgb(3, 77, 3) solid 2px;
-border-radius: 5px;
-font-size: 15px;
+    background-color: #058d25;
+    border: rgb(3, 77, 3) solid 2px;
+    border-radius: 5px;
+    font-size: 15px;
 }
 
 .close-btn {
@@ -363,19 +344,18 @@ font-size: 15px;
     height: 40px;
 }
 
-
 /* *************** */
 .subs{
     display: flex;
     overflow-x: scroll;
-    /* overflow-y: hidden; */
-    border: rgba(192, 166, 16, 0.582) solid;
+    overflow-y: hidden;
+    border: rgb(255, 255, 255) solid 1px;
     background-color: rgba(0, 0, 0, 0.514);
     width: 50%;
-    height: 160px;
+    height: 90px;
     border-radius: 10px;
-    padding: 1%;
-    margin-left: 10%;
+    padding: 7%;
+    margin-left: 12%;
     margin-top: 2%;
     margin-bottom: 5%;
     padding-bottom: 15%;
@@ -389,11 +369,7 @@ font-size: 15px;
     background-image: url(images/MANAGER\ card.png);
     background-size: cover;
     position: relative;
-    /* top: -180%;
-    right: 80%; */
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
+    transform: translate(-50%, -60%);
 }
 .position{
     background-image: url(images/bbbbbbbb.png);
@@ -435,7 +411,6 @@ font-size: 15px;
     height: 70px;
     font-size: 15px;
     font-weight: 600;
-
 }
 #powers{
     position: absolute;
@@ -448,7 +423,6 @@ font-size: 15px;
     text-align: center;
     display: flex;
     gap: 3px;
-
 }
 #club-nation{
     position: absolute;
@@ -459,7 +433,6 @@ font-size: 15px;
     width: 40%;
     height: 60px;
     gap: 12px;
-
 }
 #nation img{
     width: 20px;
@@ -506,15 +479,31 @@ font-size: 15px;
  }
 
  .editbox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5%;
+    padding-bottom: 50%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    gap: 10%;
     position: absolute;
-    width: 300px;
-    height: 350px;
-    background-color: red;
-    border: solid rgb(59, 59, 219) 1px;
+    width: 180px;
+    height: 220px;
+    background-color: rgb(66, 132, 238);
+    border: solid rgb(18, 18, 158) 2px;
     border-radius: 10px;
-    top: 17%;
+    top: 15%;
     left: 88%;
-    z-index: 1;
+    z-index: 4;
+}
+
+.editbox input{
+    border-radius: 5px;
+    color: #272727;
+    margin-top: 2%;
 }
 
 .cancel-btn{
@@ -522,21 +511,23 @@ font-size: 15px;
     justify-content: center;
     align-items: center;
     display: flex;
-    top: 93%;
-    right: 79%;
+    top: 91%;
+    border: rgb(43, 4, 128) solid 1px;
+    right: 65%;
     width: 60px;
     height: 20px;
 }
 .confirm-btn{
-        position: absolute;
+    position: absolute;
     justify-content: center;
     align-items: center;
     display: flex;
-    top: 93%;
+    top: 91%;
     right: 1%;
     width: 60px;
     height: 20px;
     background-color: green;
+    border: rgb(43, 4, 128) solid 1px;
 }
 .cancel-btn:hover{
     background-color: #160967;
